Fix sidebar margins on smaller screens

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -118,6 +118,9 @@ a {
     flex: 1 1 30%;
     display: inline-flex;
     flex-direction: column;
+
+    padding-right: 2em;
+    word-break: break-word;
   }
 
   .main {
@@ -133,6 +136,7 @@ a {
 
     .sidebar {
       display: inline;
+    padding-right: 0;
 
       & > * {
         &:not(:last-child)::after {
